--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(img/demon.jpg);
+    background-image: url(img/my web);
     background-size: cover;
     background-position: center;
 }
